# ifc-gherkin-rules

./: pyproject.toml
.github/workflows/: ci.yml
features/: IBP002-Alignment-business-logic-and-representation.feature
features/steps/thens/: alignment.py
features/steps/utils/ifc43x_alignment_validation/entities/: IfcAlignment.py
test/files/ibp002/: README.md  fail-ibp002-business_logic_only.ifc  fail-ibp002-representation_only.ifc  pass-ibp002-both_business_logic_and_representation.ifc
