[tool.poetry]
name = "ifc-gherkin-rules"
version = "0.1.0"
description = "Gherking rules for buildingSMART Validation Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ifc_gherkin_rules"}]

[tool.poetry.dependencies]
python = ">3.08, <3.12"
behave = "^1.2.6"
tabulate = "^0.9.0"
pyparsing = "^3.1.1"
ifcopenshell = "^0.7.0.231118"
lark = "^1.1.8"
SQLAlchemy = "^2.0.24"
SQLAlchemy-Utils = "^0.41.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--verbose"
]
console_output_style = "progress"
